--- a/src/main/res/layout/activity_update_profile.xml
+++ b/src/main/res/layout/activity_update_profile.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="top"
         android:gravity="bottom"
         android:orientation="vertical"
-        android:weightSum="15"
+        android:weightSum="16"
 
         >
         <ImageView
@@ -43,7 +43,8 @@
             android:paddingTop="4dp"
             android:textColor="@color/black"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
         <EditText
             android:id="@+id/name"
@@ -56,6 +57,8 @@
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:background="@drawable/edittextradius"
+            android:clickable="false"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:gravity="center"
             android:inputType="textPersonName"
             android:maxLength="20"
@@ -75,6 +78,7 @@
             android:background="@drawable/edittextradius"
             android:gravity="center"
             android:inputType="textPersonName"
+            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:maxLength="10"
             android:maxLines="1"
             android:textSize="24sp" />
@@ -90,6 +94,23 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:textColor="#3333CC"
+            />
+        <EditText
+            android:id="@+id/alreadypassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+
+            android:hint="Exist Password"
+            android:inputType="textPassword"
+            android:background="@drawable/edittextradius"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
+            android:visibility="invisible"
             />
         <EditText
             android:id="@+id/newpassword"
@@ -138,4 +159,3 @@
     </LinearLayout>
 
 </FrameLayout>
-
