--- a/src/main/res/layout/published_items.xml
+++ b/src/main/res/layout/published_items.xml
@@ -56,6 +56,7 @@
                     android:layout_marginRight="11dp"
                     android:clickable="true"
                     android:elevation="5dp"
+                    android:visibility="invisible"
                     android:src="@drawable/ic_delete" />
             </LinearLayout>
             <TextView
